syntax = "proto3";

package phoenix.phoenix;

import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "phoenix/phoenix/params.proto";

option go_package = "github.com/govm-net/phoenix/x/phoenix/types";

// GenesisState defines the phoenix module's genesis state.
message GenesisState {
  
  // params defines all the parameters of the module.
           Params       params            = 1 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
}

